--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,12 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="playground"
-    />
+    <meta name="description" content="FIFA21-Players" />
 
-    <title>Playground</title>
+    <title>FIFA21 - Players</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
